--- a/app/src/main/res/layout/fragment_no_worry.xml
+++ b/app/src/main/res/layout/fragment_no_worry.xml
@@ -6,9 +6,45 @@
     tools:context=".NoWorryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       >
+       <ListView
+           android:layout_marginTop="10dp"
+           android:layout_marginBottom="80dp"
+           android:layout_width="match_parent"
+           android:layout_height="500dp"
+           android:id="@+id/messages_view"
+           android:layout_alignParentTop="true"
+           android:layout_alignParentLeft="true"
+           android:layout_alignParentStart="true" />
 
+
+
+       <LinearLayout
+           android:id="@+id/input_bar"
+           android:layout_width="fill_parent"
+           android:layout_height="75dp"
+           android:layout_alignParentBottom="true"
+           android:background="@color/white"
+           android:orientation="horizontal" >
+
+           <EditText
+               android:id="@+id/message_input"
+               android:layout_weight="0.7"
+               android:layout_width="0dp"
+               android:layout_height="match_parent"
+               android:inputType="text" />
+
+           <Button
+               android:id="@+id/send_button"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginTop="20dp"
+               android:layout_marginRight="20dp"
+               android:text="send"/>
+
+       </LinearLayout>
+   </RelativeLayout>
 </FrameLayout>
