--- a/app/src/main/res/menu/drawer_list.xml
+++ b/app/src/main/res/menu/drawer_list.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/myProfile"
-        android:title="My profile" />
+        android:title="Why Not to worry" />
     <item
         android:id="@+id/people"
-        android:title="People" />
+        android:title="Do's" />
     <item
         android:id="@+id/settings"
         android:title="Settings" />
