--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -3,8 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E7657786"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NoWorryFragment">
+    tools:context=".ChannelFragment">
 
     <!-- TODO: Update blank fragment layout -->
 <!--    <TextView-->
