--- a/app/src/main/res/layout/message_card.xml
+++ b/app/src/main/res/layout/message_card.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/message_box"
     >
-
     <TextView
         android:id="@+id/username"
         android:textStyle="bold"
         android:textSize="15sp"
-        android:textColor="@color/color1"
+        android:textColor="@color/twitter_black"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="username: "
         android:layout_marginTop="1sp"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,7 @@
         android:layout_height="match_parent"
         android:text="\nhello afsdsdaafdssdfdsafadsafdsfadsfasdfasdddddddddddddddddddfdsaaaaaaaaaaaa\n"
         android:layout_marginLeft="2dp"
-        android:textColor="@color/black"
+        android:textColor="@color/twitter_extra_light_grey"
         android:textSize="14sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/username"
