--- a/app/src/main/res/layout/message_card.xml
+++ b/app/src/main/res/layout/message_card.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="10dp"
+    android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/message_box"
     >
