--- a/app/src/main/res/menu/drawer_list.xml
+++ b/app/src/main/res/menu/drawer_list.xml
@@ -32,6 +32,11 @@
                     android:icon="@drawable/hashtag"
                     android:id="@+id/donts"
                     android:title="dont's" />
+                <item
+                    android:icon="@drawable/hashtag"
+                    android:id="@+id/oxygen"
+                    android:title="oxygen availability"
+                    ></item>
             </group>
         </menu>
     </item>
