--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
                 android:drawablePadding="8dp"
                 android:drawableLeft="@drawable/ic_pass"
                 android:gravity="center_vertical"
-                android:hint="Passowrd"
+                android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:singleLine="true"
